manifest/production/namespaces/ingress/ingress-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-deployment
  template:
    metadata:
      labels:
        app: ingress-deployment
    spec:
      containers:
      - name: ingress-deployment
        image: nginx:latest
        resources:
          limits:
            memory: "20Mi"
            cpu: "20m"
        ports:
        - containerPort: 80
