manifest/production/namespaces/ingress/ingress-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ingress
spec:
  selector:
    app: ingress-deployment
  ports:
  - port: 80
    targetPort: 80
