manifest/production/namespaces/ingress/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
spec:
  rules:
  - host: dicky-setiadi.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-ingress
            port: 
              number: 80
